adding addional GA events and modifying page tracking url

--- a/includes/js/proud-actions-app/app/index.html
+++ b/includes/js/proud-actions-app/app/index.html
@@ -26,19 +26,19 @@
     <!-- endbuild -->
     <script type="text/javascript">
 
-    var Proud = { 
-        settings: {
-            proud_actions_app: {
-                instances: {
-                    "proud_actions_app-32021001": {
-                        active_tabs: {
-                            payments: "payments"
-                        }
-                    }
-                }
-            }
-        }
-    };
+    var Proud = {}; 
+    //     settings: {
+    //         proud_actions_app: {
+    //             instances: {
+    //                 "proud_actions_app-32021001": {
+    //                     active_tabs: {
+    //                         payments: "payments"
+    //                     }
+    //                 }
+    //             }
+    //         }
+    //     }
+    // };
   
     </script>
     <script type="text/javascript">
