--- a/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-status.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-status.html
@@ -4,24 +4,61 @@
       <i class="fa fa-search"></i> Lookup service request
     </li>
   </ol>
+
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-xs-12">
       <form class="form-inline">
         <div class="form-group">
-          <label for="code">Tracking code</label>
-          <input type="text" class="form-control" id="code" ng-model="code" placeholder="Try 2d13-2 or 3b16-4">
+          <label for="lookup">Issue code</label>
+          <input type="text" class="form-control" id="lookup" ng-model="lookup" placeholder="Try '1'">
         </div>
-        <a class="btn btn-primary" main-toggle="slide-left" ui-sref="city.status.item({code: code})">Lookup</a>
-        <h3>Recent items</h3>
-        <p><a href="" ui-sref="city.status.item({code: '2d13-2'})">Graffiti Report</a></p>
+        <a class="btn btn-primary" main-toggle="slide-left" ui-sref="city.status.item({code: lookup})">Lookup</a>
       </form>
     </div>
-    <div class="col-md-3">
-      <!--<a href="#" ng-click="" class="btn btn-default">
-        <div><i class="fa fa-map-marker fa-3x"></i></div>
-        View map of <br/>recent issues &raquo;
-      </a>-->
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4 col-md-3">
+      <ul class="nav nav-pills nav-stacked">
+        <li role="presentation" ng-class="{'active': activeTab == 'me'}" ng-if="myIssues !== -1"><a href="#" ng-click="tabClick('me', $event)"><i class="fa fa-fw fa-user"></i> My issues</a></li>
+        <li role="presentation" ng-class="{'active': activeTab == 'recent'}"><a href="#" ng-click="tabClick('recent', $event)"><i class="fa fa-fw fa-clock-o"></i> Recently in {{city}}</a></li>
+        <li role="presentation" ng-if="showMap"><a href="#" ng-click="clickMap($event)"><i class="fa fa-fw fa-map"></i> Map</a></li>
+      </ul>
     </div>
+
+    <div class="col-md-8">
+
+      <div ng-if="activeTab == 'me'">
+        <div ng-if="!myIssues">
+          <p>We do not have a record of any reported issues on this device.  Search your email for your
+          Issue Code and enter it in the box above.</p>
+          <p><a class="btn btn-default" href="#" ui-sref="city.report"><i class="fa fa-fw fa-exclamation-triangle"></i> Report an issue</a></p>
+        </div>
+        <ul ng-if="myIssues" class="title-list list-unstyled">
+          <li ng-repeat="item in myIssues" ui-sref="city.status.item({code: item.id})" class="teaser-mini">
+            <h4><a href="" ui-sref="city.status.item({code: item.id})">{{item.title}} <small>{{item.id}}</small></a></h4>
+            <p>
+              <span class="pull-right text-muted">{{item.created_at | date:'MMM d yyyy'}}</span>
+              <span class="text-muted">{{item.address}}</span>
+            </p>
+          </li>
+        </ul>
+      </div>
+
+      <ul ng-if="activeTab == 'recent'" class="title-list list-unstyled">
+        <li ng-repeat="item in recentIssues" ui-sref="city.status.item({code: item.id})"  class="teaser-mini">
+          <img ng-if="item.thumb" ng-src="{{ issueThumb(item) }}" class="pull-right" />
+          <span class="pull-right track-status status-open">open</span>
+          <h6><a href="" ui-sref="city.status.item({code: item.id})">{{item.title}}</a></h6>
+          <p>
+            <span class="text-muted pull-right">{{item.created_at | date:'MMM d yyyy'}}</span>
+            <span class="text-muted">{{item.address}}</span>
+          </p>
+        </li>
+      </ul>
+
+    </div> <!-- /row -->
+
   </div>
 
 </div>
