--- a/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-status.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-status.html
@@ -1,4 +1,4 @@
-<div class="slide-left-2">
+<div class="slide-left-2 issue-status">
   <ol class="breadcrumb clean">
     <li class="active">
       <i class="fa fa-search"></i> Lookup service request
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row issue-status-tabs">
     <div class="col-sm-4 col-md-3">
       <ul class="nav nav-pills nav-stacked">
         <li role="presentation" ng-class="{'active': activeTab == 'me'}" ng-if="myIssues !== -1"><a href="#" ng-click="tabClick('me', $event)"><i class="fa fa-fw fa-user"></i> My issues</a></li>
@@ -26,7 +26,7 @@
       </ul>
     </div>
 
-    <div class="col-md-8">
+    <div class="col-md-8 tab-content">
 
       <div ng-if="activeTab == 'me'">
         <div ng-if="!myIssues">
