Initial commit of vote app

--- a/includes/js/proud-actions-app/app/index.html
+++ b/includes/js/proud-actions-app/app/index.html
@@ -45,16 +45,17 @@
                 "map": "albatrossdigital.lpkdpcjb"
             },
             'proudcity_api': 'http://localhost:4000',
-            'proudcity_site_id': 'san-rafael-ca.proudcity.com'
+            'proudcity_site_id': 'san-rafael-ca.proudcity.com',
         },
         "proud_actions_app": {
             "instances": {
                 "proud_actions_app-1391001": {
                     "active_tabs": {
-                        "faq": "faq",
-                        "payments": "payments",
-                        "report": "report",
-                        "status": "status"
+                        "vote": "vote",
+                        //"faq": "faq",
+                        //"payments": "payments",
+                        //"report": "report",
+                        //"status": "status",
                     },
                     "category_section": {
                         "education-2": "education-2",
@@ -81,7 +82,9 @@
                 "payment": {
                     "service": "link",
                     "stripe_key": ""
-                }
+                },
+                'google_key': 'AIzaSyAYvdraLh30IA0q9Nio4RB_IcvwB9Vp5RI',
+                'google_election_id': 2000
             }
         },
     };
@@ -149,5 +152,17 @@
     <script src="js/apps/311App/routes/issuesRoutes.js"></script>
     <script src="js/apps/311App/routes/paymentRoutes.js"></script>
     <!-- endbuild -->
+    <!-- build:js js/vote.js -->
+    <script src="js/apps/311App/directives/googlePlace.js"></script>
+    <script src="js/apps/311App/providers/googleCivicInfoService.js"></script>
+    <script src="js/apps/311App/routes/voteRoutes.js"></script>
+    <!-- endbuild -->
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAYvdraLh30IA0q9Nio4RB_IcvwB9Vp5RI"></script>
+
+    <style>
+        .action-box>div {
+            border: none;
+        }
+    </style>
   </body>
 </html>
