--- a/includes/js/proud-actions-app/app/index.html
+++ b/includes/js/proud-actions-app/app/index.html
@@ -157,7 +157,7 @@
     <script src="js/apps/311App/providers/googleCivicInfoService.js"></script>
     <script src="js/apps/311App/routes/voteRoutes.js"></script>
     <!-- endbuild -->
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAYvdraLh30IA0q9Nio4RB_IcvwB9Vp5RI"></script>
+    <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAYvdraLh30IA0q9Nio4RB_IcvwB9Vp5RI"></script>
 
     <style>
         .action-box>div {
