Trying to fix err with Leaflet maps

--- a/includes/js/proud-actions-app/app/index.html
+++ b/includes/js/proud-actions-app/app/index.html
@@ -123,9 +123,11 @@
     <script src="bower_components/angular-lazycompile/src/angular-lazycompile.js"></script>
     <!-- endbuild -->
     <!-- build:js js/maps.js -->
+    <!--  @todo
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/mapbox.js/mapbox.standalone.js"></script>
     <script src="bower_components/leaflet.locatecontrol/src/L.Control.Locate.js"></script>
+    -->
     <!-- endbuild -->
     <!-- build:js js/libraries.min.js -->
     <!-- bower:js -->
