--- a/includes/js/proud-actions-app/app/index.html
+++ b/includes/js/proud-actions-app/app/index.html
@@ -55,6 +55,7 @@
                         //"payments": "payments",
                         //"report": "report",
                         //"status": "status",
+                        //"custom": "custom"
                     },
                     "category_section": {
                         "education-2": "education-2",
@@ -67,7 +68,10 @@
                         "services": "services",
                         "culture-recreation": "culture-recreation"
                     },
-                    "expand_section": false
+                    "expand_section": false,
+                    "custom_title": 'Custom title',
+                    "custom_icon": 'fa fa-facebook',
+                    "custom_content": '<i>Custom content</i>'
                 }
             },
             "global": {
@@ -154,6 +158,7 @@
     <script src="js/apps/311App/routes/faqRoutes.js"></script>
     <script src="js/apps/311App/routes/issuesRoutes.js"></script>
     <script src="js/apps/311App/routes/paymentRoutes.js"></script>
+    <script src="js/apps/311App/routes/customRoutes.js"></script>
     <!-- endbuild -->
     <!-- build:js js/vote.min.js -->
     <script src="js/apps/311App/directives/googlePlace.js"></script>
