--- a/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-create-categories.html
+++ b/includes/js/proud-actions-app/app/views/apps/311App/issues/issue-create-categories.html
@@ -15,6 +15,10 @@
           <i ng-if="item.meta.icon" class="fa {{item.meta.icon}}"></i>
           <span ng-bind-html="item.title.rendered"></span>
         </a>
+        <a ng-if="service !== 'seeclickfix' && item.meta.issue_category_type === 'form'" main-toggle="slide-left" href="#" ng-href="{{item.link}}">
+          <i ng-if="item.meta.icon" class="fa {{item.meta.icon}}"></i>
+          <span ng-bind-html="item.title.rendered"></span>
+        </a>
         <a ng-if="service === 'seeclickfix'" main-toggle="slide-left" href="#" ui-sref="city.report.map({type: item.id})">
           <i ng-if="item.icon" class="fa fa-{{item.icon}}"></i>
           <span ng-bind-html="item.title"></span>
