Fixing iframes in 311 custom tab https://github.com/proudcity/wp-proudcity/issues/530

--- a/includes/js/proud-actions-app/app/index.html
+++ b/includes/js/proud-actions-app/app/index.html
@@ -56,7 +56,7 @@
                         //"payments": "payments",
                         "report": "report",
                         //"status": "status",
-                        //"custom": "custom"
+                        "custom": "custom"
                     },
                     "category_section": {
                         "education-2": "education-2",
@@ -72,7 +72,7 @@
                     "expand_section": false,
                     "custom_title": 'Custom title',
                     "custom_icon": 'fa fa-facebook',
-                    "custom_content": '<i>Custom content</i>'
+                    "custom_content": '<iframe src="https://public.romuluscrm.com/departments/sm57h2mx/cases/new" width="500px" height="1590" frameborder="0" style="border: none"></iframe><b>asdf</b>'
                 }
             },
             "global": {
