--- a/includes/js/proud-actions-app/app/index.html
+++ b/includes/js/proud-actions-app/app/index.html
@@ -16,11 +16,12 @@
     <link rel="stylesheet" href="bower_components/afkl-lazy-image/release/lazy-image-style.css">
     <!-- endbower -->
     <!-- endbuild -->
-    <link rel="stylesheet" href="https://example.proudcity.com/wp-content/themes/wp-proud-theme/dist/styles/proud-vendor.css">
-    <link rel="stylesheet" href="https://example.proudcity.com/wp-content/themes/wp-proud-theme/dist/styles/proud.css">
     <!-- build:css cs/maps.css -->
     <link rel="stylesheet" href="bower_components/mapbox.js/mapbox.css">
     <link rel="stylesheet" href="bower_components/leaflet.locatecontrol/dist/L.Control.Locate.mapbox.css">
+    <!-- endbuild -->
+    <!-- build:css css/proudcity-patterns.min.css -->
+    <link rel="stylesheet" href="css/bootstrap.css">
     <!-- endbuild -->
     <!-- build:css css/app.min.css -->
     <link rel="stylesheet" href="css/app.css">
@@ -52,11 +53,11 @@
                 "proud_actions_app-1391001": {
                     "active_tabs": {
                         "vote": "vote",
-                        //"faq": "faq",
+                        "faq": "faq",
                         //"payments": "payments",
-                        "report": "report",
+                        //"report": "report",
                         //"status": "status",
-                        "custom": "custom"
+                        //"custom": "custom"
                     },
                     "category_section": {
                         "education-2": "education-2",
