--- a/includes/js/proud-actions-app/app/vote.html
+++ b/includes/js/proud-actions-app/app/vote.html
@@ -124,6 +124,7 @@
     <script src="js/apps/311App/routes/issuesRoutes.js"></script>
     <script src="js/apps/311App/routes/paymentRoutes.js"></script>
     <script src="js/apps/311App/routes/customRoutes.js"></script>
+    <script src="js/apps/311App/directives/share.js"></script>
     <script src="js/apps/311App/directives/googlePlace.js"></script>
     <script src="js/apps/311App/providers/googleCivicInfoService.js"></script>
     <script src="js/apps/311App/routes/voteRoutes.js"></script>
