Adding Google analytics tracking tags

--- a/includes/js/proud-actions-app/app/index.html
+++ b/includes/js/proud-actions-app/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <base href="/" />
-    <meta property="og:image" content="http://FILLME!/images/shareimg.jpg" />
+    <meta property="og:image" content="https://my.proudcity.com/images/IconBlack.svg" />
     <meta property="og:url" content="https://vote.proudcity.com" />
     <meta property="og:title" content="ProudCity Vote" />
     <meta property="og:description" content="Enter your address to find out where and how to vote and learn more about the issues on the ballot." />
@@ -62,7 +62,7 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'FILLME!', 'auto');
+        ga('create', 'UA-71593638-6', 'auto');
     </script>
   </head>
   <body>
